trunk/Archive2/3b/ec68bb15352d55/output
main.cpp:1:20: warning: extra tokens at end of #include directive
 #include <iostream>#include <iostream>
                    ^
main.cpp: In function 'int main()':
main.cpp:11:6: error: 'm' was not declared in this scope
      m[str[i]]++;
      ^
main.cpp:13:13: error: 'm' was not declared in this scope
     cout << m['a'] << endl;
             ^
